<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_layout"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registration_toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="400dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/registration_linear_layout"
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:text="Заполните поля ниже"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="16dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/registration_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/registration_phone_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/registration_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user_name" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/registration_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"/>

            <RadioGroup
                android:id="@+id/registration_rg"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Выберите ваш пол"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="Мужской"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:text="Женский"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <android.support.design.button.MaterialButton
                android:id="@+id/registration_btn"
                android:text="Зарегистрироваться"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
    </android.support.design.card.MaterialCardView>
</LinearLayout>
